--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,18 @@ h6 {
   --color-grey: #4a4a4a;
   --color-grey-dark: #434a54;
   --color-blue: #1d6ff3;
+  --color-blue-hover: #1059cf;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Titillium", sans-serif;
+}
+body.is-fixed {
+  overflow-y: hidden;
 }
 
 .wrapper {
@@ -111,14 +123,50 @@ h6 {
   overflow: hidden;
 }
 
-body {
-  font-family: "Titillium", sans-serif;
-}
-
 .container {
   max-width: 1100px;
   padding: 0 10px;
   margin: 0 auto;
+}
+
+.primary-title {
+  font-family: "Sailec-Bold", sans-serif;
+  font-size: 2.25rem;
+  line-height: 122%;
+  color: var(--color-grey);
+  letter-spacing: 0.25px;
+}
+
+.grey-text {
+  font-size: 1.125rem;
+  line-height: 167%;
+  color: var(--color-grey-dark);
+}
+
+.blue-link {
+  font-size: 1rem;
+  line-height: 163%;
+  color: var(--color-blue);
+  letter-spacing: 0.25px;
+  position: relative;
+  transition: color 0.2s linear;
+}
+.blue-link:hover {
+  color: var(--color-blue-hover);
+}
+.blue-link::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-blue-hover);
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+.blue-link:hover::after {
+  opacity: 1;
 }
 
 .header__body {
@@ -142,7 +190,7 @@ body {
     right: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(99, 114, 128, 0.6);
     -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
@@ -242,7 +290,8 @@ body {
 .hero__body {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
+  justify-content: space-between;
 }
 @media (max-width: 1023.98px) {
   .hero__body {
@@ -251,18 +300,18 @@ body {
   }
 }
 .hero__content {
-  flex: 0 1 50%;
+  max-width: 522px;
 }
 @media (max-width: 1023.98px) {
   .hero__content {
-    max-width: 700px;
+    max-width: 600px;
   }
 }
 .hero__title {
   font-size: 3rem;
   line-height: 121%;
   color: var(--color-grey);
-  font-family: "Sailec-Bold";
+  font-family: "Sailec-Bold", sans-serif;
   letter-spacing: 0.25px;
   margin-bottom: 20px;
 }
@@ -270,11 +319,6 @@ body {
   .hero__title {
     font-size: 2.375rem;
   }
-}
-.hero__text {
-  font-size: 1.125rem;
-  line-height: 167%;
-  color: var(--color-grey-dark);
 }
 .hero__shape {
   width: 56%;
@@ -300,6 +344,126 @@ body {
   padding-bottom: 100%;
 }
 .hero__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.about {
+  background-color: rgba(255, 255, 255, 0.85);
+}
+.about__body {
+  display: flex;
+  align-items: center;
+  padding: 30px 0;
+  gap: 20px;
+}
+@media (max-width: 1023.98px) {
+  .about__body {
+    flex-direction: column-reverse;
+    padding: 50px 0;
+  }
+}
+.about__shape {
+  width: 55%;
+  margin-left: -75px;
+}
+@media (max-width: 1200px) {
+  .about__shape {
+    margin-left: 0;
+  }
+}
+@media (max-width: 1023.98px) {
+  .about__shape {
+    width: 80%;
+  }
+}
+@media (max-width: 424.98px) {
+  .about__shape {
+    width: 100%;
+  }
+}
+.about__image {
+  position: relative;
+  padding-bottom: 100%;
+}
+.about__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about__content {
+  max-width: 437px;
+}
+@media (max-width: 1023.98px) {
+  .about__content {
+    max-width: 600px;
+  }
+}
+.about__title {
+  margin-bottom: 15px;
+}
+.about__text {
+  margin-bottom: 21px;
+}
+
+.work__body {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+}
+@media (max-width: 1023.98px) {
+  .work__body {
+    flex-direction: column;
+  }
+}
+.work__content {
+  max-width: 500px;
+}
+@media (max-width: 1023.98px) {
+  .work__content {
+    max-width: 600px;
+  }
+}
+.work__title {
+  margin-bottom: 15px;
+}
+.work__text {
+  margin-bottom: 21px;
+}
+.work__shape {
+  width: 56%;
+  margin-right: -75px;
+}
+@media (max-width: 1200px) {
+  .work__shape {
+    margin-right: 0;
+  }
+}
+@media (max-width: 1023.98px) {
+  .work__shape {
+    width: 80%;
+  }
+}
+@media (max-width: 424.98px) {
+  .work__shape {
+    width: 100%;
+  }
+}
+.work__image {
+  position: relative;
+  padding-bottom: 100%;
+}
+.work__image img {
   position: absolute;
   top: 0;
   left: 0;
