--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,23 +24,69 @@
   --color-grey: #4a4a4a;
   --color-grey-dark: #434a54;
   --color-blue: #1d6ff3;
+  --color-blue-hover: #1059cf;
 }
 
 // Global styles
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Titillium', sans-serif;
+
+  &.is-fixed {
+    overflow-y: hidden;
+  }
+}
 
 .wrapper {
   min-height: 100%;
   overflow: hidden;
 }
 
-body {
-  font-family: 'Titillium', sans-serif;
-}
-
 .container {
   max-width: 1100px;
   padding: 0 10px;
   margin: 0 auto;
+}
+
+.primary-title {
+  font-family: 'Sailec-Bold', sans-serif;
+  @include textProperties(36px, 44px, var(--color-grey));
+  letter-spacing: 0.25px;
+}
+
+.grey-text {
+  @include textProperties(18px, 30px, var(--color-grey-dark));
+}
+
+.blue-link {
+  @include textProperties(16px, 26px, var(--color-blue));
+  letter-spacing: 0.25px;
+  position: relative;
+  transition: color 0.2s linear;
+
+  &:hover {
+    color: var(--color-blue-hover);
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-blue-hover);
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.2s linear;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
 }
 
 // Header
@@ -68,7 +114,7 @@ body {
     right: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(99, 114, 128, 0.6);
     backdrop-filter: blur(5px);
     z-index: 2;
@@ -176,12 +222,11 @@ body {
 // Hero
 
 .hero {
-  // padding-right: 75px;
-
   &__body {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 10px;
+    justify-content: space-between;
 
     @media (max-width: 1023.98px) {
       flex-direction: column;
@@ -189,15 +234,15 @@ body {
     }
   }
   &__content {
-    flex: 0 1 50%;
+    max-width: 522px;
 
     @media (max-width: 1023.98px) {
-      max-width: 700px;
+      max-width: 600px;
     }
   }
   &__title {
     @include textProperties(48px, 58px, var(--color-grey));
-    font-family: 'Sailec-Bold';
+    font-family: 'Sailec-Bold', sans-serif;
     letter-spacing: 0.25px;
     margin-bottom: 20px;
 
@@ -205,11 +250,124 @@ body {
       font-size: rem(38px);
     }
   }
-  &__text {
-    @include textProperties(18px, 30px, var(--color-grey-dark));
+  &__shape {
+    width: 56%;
+    margin-right: -75px;
+
+    @media (max-width: 1200px) {
+      margin-right: 0;
+    }
+
+    @media (max-width: 1023.98px) {
+      width: 80%;
+    }
+
+    @media (max-width: 424.98px) {
+      width: 100%;
+    }
+  }
+  &__image {
+    position: relative;
+    padding-bottom: 100%;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+// About
+
+.about {
+  background-color: rgba(255, 255, 255, 0.85);
+
+  &__body {
+    display: flex;
+    align-items: center;
+    padding: 30px 0;
+    gap: 20px;
+
+    @media (max-width: 1023.98px) {
+      flex-direction: column-reverse;
+      padding: 50px 0;
+    }
   }
   &__shape {
-    // flex: 0 1 50%;
+    width: 55%;
+    margin-left: -75px;
+
+    @media (max-width: 1200px) {
+      margin-left: 0;
+    }
+
+    @media (max-width: 1023.98px) {
+      width: 80%;
+    }
+
+    @media (max-width: 424.98px) {
+      width: 100%;
+    }
+  }
+  &__image {
+    position: relative;
+    padding-bottom: 100%;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__content {
+    max-width: 437px;
+
+    @media (max-width: 1023.98px) {
+      max-width: 600px;
+    }
+  }
+  &__title {
+    margin-bottom: 15px;
+  }
+  &__text {
+    margin-bottom: 21px;
+  }
+}
+
+// Work
+
+.work {
+  &__body {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+
+    @media (max-width: 1023.98px) {
+      flex-direction: column;
+    }
+  }
+  &__content {
+    max-width: 500px;
+
+    @media (max-width: 1023.98px) {
+      max-width: 600px;
+    }
+  }
+  &__title {
+    margin-bottom: 15px;
+  }
+  &__text {
+    margin-bottom: 21px;
+  }
+  &__shape {
     width: 56%;
     margin-right: -75px;
 
