--- a/css/style.css
+++ b/css/style.css
@@ -472,3 +472,71 @@ body.is-fixed {
   -o-object-fit: cover;
      object-fit: cover;
 }
+
+.blog__body {
+  padding: 80px 0 110px;
+}
+@media (max-width: 767.98px) {
+  .blog__body {
+    padding: 40px 0 50px;
+  }
+}
+.blog__title {
+  font-size: 1.5rem;
+  line-height: 121%;
+  color: var(--color-grey);
+  letter-spacing: 0.25px;
+  font-family: "Sailec-Bold", sans-serif;
+  margin-bottom: 11px;
+}
+
+.grid-blog {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  gap: 30px;
+}
+.grid-blog__image {
+  position: relative;
+  padding-bottom: 56%;
+}
+.grid-blog__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.grid-blog__content {
+  padding: 17px 19px;
+  background-color: rgba(255, 255, 255, 0.95);
+  margin: -50px auto 0;
+  position: relative;
+  z-index: 2;
+  width: 85%;
+}
+.grid-blog__title {
+  font-size: 1.5rem;
+  line-height: 129%;
+  color: var(--color-grey);
+  letter-spacing: 0.25px;
+  font-family: "Sailec-Bold", sans-serif;
+  position: relative;
+  padding-bottom: 6px;
+  margin-bottom: 9px;
+}
+.grid-blog__title::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.1);
+  bottom: 0;
+  left: 0;
+}
+.grid-blog__text {
+  font-size: 1rem;
+  line-height: 163%;
+  color: var(--color-grey-dark);
+}
