--- a/scss/style.scss
+++ b/scss/style.scss
@@ -397,3 +397,70 @@ body {
     }
   }
 }
+
+// Blog
+
+.blog {
+  &__body {
+    padding: 80px 0 110px;
+
+    @media (max-width: 767.98px) {
+      padding: 40px 0 50px;
+    }
+  }
+  &__title {
+    @include textProperties(24px, 29px, var(--color-grey));
+    letter-spacing: 0.25px;
+    font-family: 'Sailec-Bold', sans-serif;
+    margin-bottom: 11px;
+  }
+}
+
+.grid-blog {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  gap: 30px;
+
+  &__image {
+    position: relative;
+    padding-bottom: 56%;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__content {
+    padding: 17px 19px;
+    background-color: rgba(255, 255, 255, 0.95);
+    margin: -50px auto 0;
+    position: relative;
+    z-index: 2;
+    width: 85%;
+  }
+  &__title {
+    @include textProperties(24px, 31px, var(--color-grey));
+    letter-spacing: 0.25px;
+    font-family: 'Sailec-Bold', sans-serif;
+    position: relative;
+    padding-bottom: 6px;
+    margin-bottom: 9px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 30px;
+      height: 2px;
+      background-color: rgba(0, 0, 0, 0.1);
+      bottom: 0;
+      left: 0;
+    }
+  }
+  &__text {
+    @include textProperties(16px, 26px, var(--color-grey-dark));
+  }
+}
