--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ h6 {
   --color-grey-dark: #434a54;
   --color-blue: #1d6ff3;
   --color-blue-hover: #1059cf;
+  --color-blue-active: #0a4db8;
 }
 
 html {
@@ -539,4 +540,106 @@ body.is-fixed {
   font-size: 1rem;
   line-height: 163%;
   color: var(--color-grey-dark);
+}
+
+.contact {
+  background-color: #eeeeee;
+}
+.contact__body {
+  padding: 80px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+@media (max-width: 990.98px) {
+  .contact__body {
+    display: block;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 767.98px) {
+  .contact__body {
+    padding: 40px 0;
+  }
+}
+.contact__content {
+  max-width: 463px;
+}
+@media (max-width: 990.98px) {
+  .contact__content {
+    margin-bottom: 20px;
+  }
+}
+.contact__title {
+  margin-bottom: 18px;
+}
+
+.form-contact {
+  flex: 0 1 420px;
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 479.98px) {
+  .form-contact {
+    display: block;
+  }
+}
+.form-contact__email {
+  flex: 1 1 100%;
+  border: 1px solid #979797;
+  padding: 8px;
+  min-height: 42px;
+  font-size: 1.125rem;
+  line-height: 133%;
+  color: var(--color-grey);
+  border-radius: 4px 0px 0px 4px;
+}
+.form-contact__email::-moz-placeholder {
+  color: #979797;
+}
+.form-contact__email:-ms-input-placeholder {
+  color: #979797;
+}
+.form-contact__email::placeholder {
+  color: #979797;
+}
+.form-contact__email:focus {
+  border: 1px solid var(--color-blue);
+  box-shadow: 0 0 2px rgba(29, 111, 243, 0.2);
+}
+@media (max-width: 479.98px) {
+  .form-contact__email {
+    width: 100%;
+    border-radius: 4px 4px 0px 0px;
+  }
+}
+.form-contact__btn {
+  font-size: 1.125rem;
+  line-height: 133%;
+  color: #fff;
+  background-color: var(--color-blue);
+  min-height: 42px;
+  display: inline-flex;
+  padding: 5px 22px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 0px 4px 4px 0px;
+  transition: background-color 0.2s linear;
+  margin-left: -1px;
+}
+.form-contact__btn:hover {
+  background-color: var(--color-blue-hover);
+}
+.form-contact__btn:active {
+  background-color: var(--color-blue-active);
+}
+@media (max-width: 479.98px) {
+  .form-contact__btn {
+    width: 100%;
+    border-radius: 0px 0px 4px 4px;
+    margin-left: 0;
+  }
 }
