--- a/scss/style.scss
+++ b/scss/style.scss
@@ -117,7 +117,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: rgba(99, 114, 128, 0.6);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(7px);
     z-index: 2;
     transform: translateY(-120%);
     transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
@@ -555,6 +555,86 @@ body {
       width: 100%;
       border-radius: 0px 0px 4px 4px;
       margin-left: 0;
+    }
+  }
+}
+
+// Footer
+
+.footer {
+  &__body {
+    padding: 50px 0 100px;
+
+    display: grid;
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
+    gap: 30px;
+
+    @media (max-width: 767.98px) {
+      padding: 20px 40px;
+      grid-template-columns: repeat(2, minmax(100px, 1fr));
+    }
+
+    @media (max-width: 419.98px) {
+      grid-template-columns: repeat(1, minmax(100px, 1fr));
+    }
+  }
+}
+
+.col-footer {
+  &__title {
+    font-family: 'Sailec-Bold', sans-serif;
+    @include textProperties(14px, 17px, var(--color-grey));
+    letter-spacing: 0.7px;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+  }
+  &__links {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    position: relative;
+
+    &_line {
+      padding-bottom: 25px;
+      margin-bottom: 17px;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 30px;
+        height: 3px;
+        background-color: rgba(0, 0, 0, 0.1);
+        bottom: 0;
+        left: 0;
+      }
+    }
+  }
+  &__link {
+    @include textProperties(14px, 24px, var(--color-grey-blue));
+    letter-spacing: 0.25px;
+    transition: color 0.2s linear;
+
+    &:hover {
+      color: var(--color-grey-dark);
+    }
+  }
+}
+
+.socials-col-footer {
+  display: flex;
+  align-items: center;
+  gap: 9px;
+
+  &__link svg path {
+    fill: #1976d2;
+    transition: fill 0.2s linear;
+
+    &:hover {
+      fill: var(--color-blue-hover);
+    }
+
+    &:active {
+      fill: var(--color-blue-active);
     }
   }
 }
