--- a/css/style.css
+++ b/css/style.css
@@ -416,55 +416,55 @@ body.is-fixed {
   margin-bottom: 21px;
 }
 
-.work__body {
+.academy__body {
   display: flex;
   align-items: center;
   gap: 10px;
   justify-content: space-between;
 }
 @media (max-width: 1023.98px) {
-  .work__body {
+  .academy__body {
     flex-direction: column;
   }
 }
-.work__content {
+.academy__content {
   max-width: 500px;
 }
 @media (max-width: 1023.98px) {
-  .work__content {
+  .academy__content {
     max-width: 600px;
   }
 }
-.work__title {
+.academy__title {
   margin-bottom: 15px;
 }
-.work__text {
+.academy__text {
   margin-bottom: 21px;
 }
-.work__shape {
+.academy__shape {
   width: 56%;
   margin-right: -75px;
 }
 @media (max-width: 1200px) {
-  .work__shape {
+  .academy__shape {
     margin-right: 0;
   }
 }
 @media (max-width: 1023.98px) {
-  .work__shape {
+  .academy__shape {
     width: 80%;
   }
 }
 @media (max-width: 424.98px) {
-  .work__shape {
+  .academy__shape {
     width: 100%;
   }
 }
-.work__image {
+.academy__image {
   position: relative;
   padding-bottom: 100%;
 }
-.work__image img {
+.academy__image img {
   position: absolute;
   top: 0;
   left: 0;
